--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,19 @@
 :root {
-    --black: #11151f;
-    --dark-grey: #d4d4d4;
-    --grey-blue-hover: #283040;
-    --grey-blue: #374456;
-    --mid-grey: #f1f1f1;
-    --white: #fcfcfc;
-    --yellow: #e5b261;
+  --black: #11151f;
+  --dark-grey: #d4d4d4;
+  --grey-blue-hover: #283040;
+  --grey-blue: #374456;
+  --mid-grey: #f1f1f1;
+  --white: #fcfcfc;
+  --yellow: #e5b261;
 }
 
 body {
-    background-color: var(--white);
-    color: var(--black);
-    font-family: 'Work Sans', sans-serif;
+  background-color: var(--white);
+  color: var(--black);
+  font-family: "Work Sans", sans-serif;
+  font-size: 24px;
 }
-
-
 
 /* ON YOUR OWN
 
@@ -25,3 +24,67 @@ body {
     3. have a drop-shadow on the text
 
 */
+h1 {
+  font-size: 60px;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: calc((100% / 2) - 1rem);
+}
+
+.form-wrapper,
+.header-content {
+  padding: 1.5rem;
+}
+
+.form-header {
+  background-color: var(--yellow);
+  color: var(--white);
+  margin-bottom: 0;
+  padding: 0.25rem 1rem;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  font-size: 24px;
+}
+
+.form-header p {
+  text-align: center;
+}
+
+.form-container {
+  background-color: var(--mid-grey);
+  margin-top: 0;
+}
+
+.form-field-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-field-group input {
+  width: 100%;
+}
+
+.form-content-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+section {
+  width: 100%;
+}
+
+/* mobile view */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium view */
+@media screen and (min-width: 820px) {
+}
+
+/* Large view */
+@media screen and (min-width: 1350px) and (max-width: 1600px) {
+}
